socklog-0.10.1
Thu, 08 Aug 2002 22:55:35 +0200
  * package/versions: new.
  * doc/network.html: typos.
  * doc/usedietlibc.html: fix path to conf-cc, conf-ld.

socklog-0.10.0
Thu, 18 Jul 2002 15:45:58 +0200
  * solaris support rewrite (thx Lars Uffmann):
    * socklog.c: new option sun_stream; new optional option door; rewrite
      solaris related code.
    * socklog-conf.c: option unix: create special run script on solaris.
    * doc/readme.solaris.html: new.
    * (thx Lars Uffmann).
  * documentation adapted.

socklog-0.9.1
Wed, 26 Jun 2002 15:54:06 +0200
  * Makefile: enable target sysdeps.

socklog-0.9.0
Fri, 31 May 2002 14:07:11 +0200
  * new service socklog-klog doing kernel logging.
  * socklog.c: fix facility and priority decoding in ucspi mode.
  * socklog-conf.c: creates socklog-klog's service directories.
  * doc/configuration.html, doc/examples.html, man/socklog-conf.8: document
    socklog-klog service.

socklog-0.8.2
Sat, 18 May 2002 15:08:09 +0200
  * src/: include public domain sources to build byte.a, unix.a, time.a:
    socklog builds without having daemontools' sources installed.
  * doc/usedietlibc.html: how to use dietlibc.

socklog-0.8.1
Sun, 28 Apr 2002 10:32:28 +0200
  * tryto.c: change return value on child timeout to 100, add FATAL prefix
    to error message on child timeout/crash.

socklog-0.8.0
Tue, 16 Apr 2002 14:11:34 +0200
  * doc/network.html: fix quoting bug, network client sample was not
    working properly.
  * doc/benefits.html: add more descriptions of benefits.
  * no code changes at all.

socklog-0.7.0
Mon,  4 Feb 2002 11:37:13 +0100
  * install-man: symlinks now point into the correct directory:
    /package/admin/socklog/man/ (thx Mike Forster).
  * socklog.c: complete revision: dropped fdbuffer.o, switched to unix.a,
    byte.a support libraries (now in the Public domain).
  * socklog-conf.c: support log dir with cross device link; optional logdir
    option must start with /.
  * Makefile: sysdeps.
  * doc: revised.