@@ -93,7 +93,7 @@ This is just for compatibility.
 side. <i>socklog</i> provides a different modular, reliable
 <a href="network.html">Network logging concept</a> instead. Logs are
 transmitted through network using a TCP connection in the default
-configuration, log transmission failures are catched. The modular design
+configuration, log transmission failures are handled. The modular design
 of <a href="http://cr.yp.to/daemontools.html">daemontools</a> and
 <i>socklog</i> makes it possible to insert encryption, authentication,
 compression, and more easily.
